# crew-companion

./: .env.example  .gitignore  .lighthouserc.js  CHANGELOG.md  CLAUDE.md  DEPLOY.md  README.es.md  README.md  package-lock.json  package.json  render.yaml
.devcontainer/: devcontainer.json  setup.sh
apps/agent/: crew.seed.json  langgraph.json  main.py  pyproject.toml
apps/agent/.langgraph_api/: .langgraph_ops.pckl
apps/agent/migrations/: 001_auth.sql  002_workspaces.sql  003_audit_log.sql  004_workspace_state.sql  005_pinning.sql  006_activity_events.sql  007_token_usage.sql  008_generated_assets.sql  009_auth_tables.sql  010_multi_project.sql  011_chat_usage.sql  012_verification_token_singular.sql  013_workspace_state_updated_at_trigger.sql  014_fix_user_projects_uuid_types.sql  015_drop_workspace_state_fk.sql  016_workspace_state_version.sql  017_token_expiry.sql  README.md
apps/agent/src/: _middleware_base.py  crew_state.py  intelligence_cleanup.py  prompts.py  runtime.py  runtime_factory.py  timing.py  tools.py  types.py
apps/agent/src/agents/: graph.py  prompts.py  tools.py
apps/agent/src/runtime/: approval_store.py  audit.py  capabilities.py  envelope.py  migrator.py  policy.py  role_grants.json  role_grants.py  tool_decorator.py
apps/agent/tests/: test_tools.py
deployment/: docker-compose.yml
project-docs/: COMPANION_HABITAT.md  INDEX.md  MASTER_WORK_PLAN.md  POLISH_PLAN.md  PROJECT_STRUCTURE.md  generative-ui-explainer.md  instagram-posts.md  tech-stack-deep-dive.md
scripts/: check-env.sh  migrate.sh  postinstall.js  seed-default-user.sh  (+1 more)
(+274 files in other folders)
