[project]
name = "agent"
version = "0.1.0"
description = "LangChain Deep Agents backend for the CopilotKit hackathon starter kit (canvas + Gemini + Notion MCP)."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "deepagents>=0.6.1,<0.7",
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "copilotkit>=0.1.0",
    "mcp-use>=1.7.0",
    "python-dotenv>=1.0.0",
    "jsonpatch>=1.33",
    "typing-extensions>=4.10.0",
    "langgraph-cli[inmem]>=0.2.0",
    "psycopg[binary]>=3.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "redis>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
